# fnp

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  fnp-conf.ini  note.md
api/: fnp_api.c  fnp_api.h  fnp_socket.c  fnp_socket.h  main.c
conf/: fnp-tap.yaml  fnp.yaml
deploy/: Dockerfile  auto_test.sh  check-md5.sh  create-randfile.sh  fnp-conf.ini  fnp.yaml  send2dpdk.sh  send2linux.sh  set-env.sh  set-tap.sh
deploy/baseimage/: Dockerfile  build-baseimage.sh
deploy/k8s/: Dockerfile  build-image.sh  dpdk-app.yaml  dpdkSlaveApp  start.sh
examples/: CMakeLists.txt  client.c  exp_common.h  fnp_tcp_server.c  ipc_master.c  ipc_slave.c  linux_tcp_server.c  send_tcp.c  server.c  socket.c  socket.h  tcp_server.c  test_conf.c  test_ring.c
examples/other/: ipc_master.c  ipc_slave.c  soaddr.c  test_hash.c  test_ring.c
inc/: fnp.h  fnp_common.h  fnp_config.h  fnp_error.h  fnp_mbuf.h  fnp_sockaddr.h  fnps.h
libs/: libfnp-conf.h
libs/conf/: build_libconf.sh  fnp.yaml  main.go
src/: fnp.c  fnp_arp.c  fnp_ether.c  fnp_icmp.c  fnp_init.c  fnp_ipv4.c  fnp_msg.c  fnp_worker.c  fnps.c  main.c
src/api/: fnp_epoll.c  fnp_frontend.c  fnp_internal.h  fnp_quic.c  fnp_socket.c  fsocket.c  fsocket.h
src/common/: fnp_api.h  fnp_common.c  fnp_common.h  fnp_error.h  fnp_frontend.h  fnp_hash.c  fnp_hash.h  fnp_list.c  fnp_list.h  fnp_msg.c  fnp_msg.h  fnp_pring.c  fnp_pring.h  fnp_quic_common.h  fnp_ring.c  fnp_ring.h  fnp_sockaddr.h  fnp_socket.c  fnp_socket.h  fnp_splay.c  fnp_splay.h  hash.c  hash.h  rbtree.c  rbtree.h
src/daemon/: fapi.c  fapi.h  flow_table.c  flow_table.h  fnp_context.c  fnp_context.h  fnp_frontend.c  fnp_frontend.h  fnp_master.c  fnp_master.h  fnp_msg.c  fnp_socket.c  fnp_worker.c  fnp_worker.h  fsocket.c  fsocket.h  main.c  raw.c  raw.h
src/daemon/arp/: arp.c  arp.h
src/daemon/cc/: cc_internal.h  cubic.c  cubic.h  fnp_cc.c  fnp_cc.h
src/daemon/common/: fnp_pring.c  fnp_pring.h  fnp_ring.h  hash.c  hash.h  rbtree.h
src/daemon/ether/: ether.c  ether.h
src/daemon/go/: build.sh  go.mod  main.go
src/daemon/icmp/: icmp.c  icmp.h
src/daemon/iface/: flow_table.c  flow_table.h  fnp_iface.c  fnp_iface.h
src/daemon/ip/: ipv4.c  ipv4.h  route.c  route.h
src/daemon/network/: flow_table.c  flow_table.h  fnp_network.c  fnp_network.h
src/daemon/picoquic/: bytestream.c  bytestream.h  config.c  logger.c  logwriter.c  loss_recovery.c  pacing.c  packet.c  paths.c  picoquic.h  picoquic_binlog.h  picoquic_config.h  picoquic_crypto_provider_api.h  picoquic_internal.h  picoquic_logger.h  picoquic_packet_loop.h  picoquic_unified_log.h  picoquic_utils.h  picosocks.c  port_blocking.c  quic.c  quic.h  quic_cc.c  quic_cc.h  quic_common.h  quic_conn.c  quic_conn.h  quic_frames.c  quic_packet.c  quic_packet.h  quic_recv.c  quic_sender.c  quic_stream.c  quicctx.c  sacks.c  sender.c  sockloop.c  spinbit.c  ticket_store.c  timing.c  (+6 more)
src/daemon/tcp/: tcp.c  tcp.h  tcp_comm.h  tcp_in.c  tcp_in.h  tcp_ofo.c  tcp_ofo.h  tcp_out.c  tcp_out.h  tcp_sock.c  tcp_sock.h  tcp_timer.c  tcp_timer.h
src/daemon/udp/: udp.c  udp.h
src/demo/: fnp_quic_client.c
src/fnp/: fnp.c  fnp.h  fnp_frontend.c  fnp_internal.h  fnp_mbuf.c  fnp_mbuf.h  fnp_quic.c  main.c  picoquic_sample.h  quic_client.c  quic_server.c
src/inc/: fnp_arp.h  fnp_ether.h  fnp_icmp.h  fnp_init.h  fnp_ipv4.h  fnp_msg.h  fnp_tcp.h  worker.h
src/ip/: fnp_ipv4.c  fnp_ipv4.h
src/sock/: fnp_sock.c  fnp_sock.h  ipv4_5tuple.c  ipv4_5tuple.h
src/tcp/: fnp_tcp.c  fnp_tcp_in.c  fnp_tcp_ofo.c  fnp_tcp_ofo.h  fnp_tcp_out.c  fnp_tcp_sock.c  fnp_tcp_sock.h  fnp_tcp_timer.c  fnp_tcp_timer.h  tcp.c  tcp_api.c  tcp_in.c  tcp_ofo.c  tcp_out.c  tcp_sock.c  tcp_timer.c
src/tcp/inc/: fnp_tcp.h  fnp_tcp_comm.h  fnp_tcp_in.h  fnp_tcp_out.h  fnp_tcp_sock.h  fnp_tcp_timer.h  tcp.h  tcp_api.h  tcp_comm.h  tcp_in.h  tcp_ofo.h  tcp_out.h  tcp_sock.h  tcp_timer.h
src/udp/: fnp_udp.c  fnp_udp.h  udp.h
test/: CMakeLists.txt  main.c  test_ring.c  udp_demo.py
test/demo/: fnp_quic_client.c  fnp_quic_server.c
test/f-stack/: Makefile  udp_client.c  udp_server.c
test/fnp/: Makefile  fnp-udp  fnp-udp.c  fnp_ring.c  fnp_tcp_client.c  fnp_tcp_server.c  fnp_udp_client.c  fnp_udp_server.c
test/fnp_ring/: fnp_ring.c
test/linux/: udp_client.c  udp_server.c
test/local/: client.c  server.c
test/remote_udp/: client.c  server.c
